# src/app/Models/Profile.php
@@ -11,7 +11,13 @@ class Profile extends Model
     use HasFactory;
 
     protected $table = "profiles";
-    protected $fillable = ["date_of_birth", "firstname", "lastname"];
+    protected $fillable = [
+        "date_of_birth",
+        "firstname",
+        "lastname",
+        "user_id",
+        "role_id",
+    ];
     protected $with = ["user", "role"];
 
     public function user(): BelongsTo
